# snowdream

./: .gitignore  README.md
code_snippets/: ProcessSingleton.h  demo_enable_shared_from_this.cpp  getfilecontent.h  hdhelper.h  kvstore.h  random.cpp  run_clang_format.py  serial_number.cpp  ssystem.h  test_auth_int.cpp  util.cpp  util.h
code_snippets/boost/interprocess/: BoundedBlockingQueueIPC.h  CMakeLists.txt  build.sh  consumer.cpp  producer.cpp  test_message.cpp
code_snippets/boost/interprocess/map/: BIType.h  BoundedMapIPC.h  test_interprocessmap.cpp
code_snippets/cfg_parse/: Path.h  inihelper.h  kvconfilehelper.h  strconv.h
code_snippets/com_wmi_gethdinfo/: getdiskinfo.cpp  getdiskinfo.sln  getdiskinfo.vcxproj  getdiskinfo.vcxproj.filters  hardDeviceSerialNumber.h  hardware.h  hardware_win_impl.h
code_snippets/data_structure/: traversal_tree.cpp
code_snippets/dbus/: dbus.cpp  dbus_monitor.c
code_snippets/design_pattern/: AbstractFactory.cpp  Adapter.cpp  Strategy.cpp
code_snippets/httphelp/: httphelp.cpp  httphelper.h  singleton.h  threadpool.h
code_snippets/httphelper/: httphelper.h
code_snippets/libfswatch/: fswatch.cpp  fswatch.hpp
code_snippets/map_test/: map_test.cpp
code_snippets/pimpl_test/: Book.cpp  Book.h  CMakeLists.txt  main.cpp
code_snippets/sm/: README.md  sm3.cpp  sm4.cpp  sm4.h  sm4m.cpp  sm4m.h  test_sm3.cpp
code_snippets/thread/: BlockingQueue_boost.h  BlockingQueue_cpp11.h  noncopyable.h
code_snippets/udev/: Makefile  main.c
code_snippets/windows/: systemversion.cpp
notes/base/: SM2_verify_sign.md  base56.md  database.md  database.sql  design_pattern.md  redis.md  regex.md  uuid.md
notes/c++/: CppCoreGuid.md  cpp11.md
notes/compilation_tool/: cmake.md  cmake_example.md  cmake_vscode.md
notes/linux/: about_process.docx  apt.md  as_current_user.md  bash.md  deb.md  detect_arch.md  device.md  disable_user_switching.md  exit_code.md  file.md  file_lock.md  filefrag.md  filemonitor.md  gdb.md  gdb_core.md  get_file_creation_time.md  get_os_install_time.md  gsettings & dbus.md  hardinfo.md  hide_library_symbol.md  iptables.md  knowledge.md  library_search_order.md  linux_command.md  linux性能优化.md  logout.md  (+21 more)
(+97 files in other folders)
